--- a/source/catalog.html
+++ b/source/catalog.html
@@ -125,30 +125,30 @@
       </section>
 
       <section class="more-goods">
-        <h2 class="more-goods__title title">Дополнительные товары<hr></hr></h2>
+        <h2 class="more-goods__title title title--hr">Дополнительные товары</h2>
         <ul class="more-goods__list">
           <li class="more-goods__item">
-            <h3 class="more-goods__item-title">Сахарозаменитель</h3>
-            <span class="more-goods_item-value">1 упаковка (100 г)</span>
-            <span class="more-goods__item-price">200 Р.</span>
+            <h3 class="more-goods__product">Сахарозаменитель</h3>
+            <span class="more-goods__value">1 упаковка (100 г)</span>
+            <span class="more-goods__price">200 Р.</span>
             <a class="more-goods__order button" href="form-order.html">Заказать</a>
           </li>
           <li class="more-goods__item">
-            <h3 class="more-goods__item-title">Питьевая вода</h3>
-            <span class="more-goods_item-value">5 литров</span>
-            <span class="more-goods__item-price">50 Р.</span>
+            <h3 class="more-goods__product">Питьевая вода</h3>
+            <span class="more-goods__value">5 литров</span>
+            <span class="more-goods__price">50 Р.</span>
             <a class="more-goods__order button" href="form-order.html">Заказать</a>
           </li>
           <li class="more-goods__item">
-            <h3 class="more-goods__item-title">Молоко</h3>
-            <span class="more-goods_item-value">1 литр</span>
-            <span class="more-goods__item-price">100 Р.</span>
+            <h3 class="more-goods__producte">Молоко</h3>
+            <span class="more-goods__value">1 литр</span>
+            <span class="more-goods__price">100 Р.</span>
             <a class="more-goods__order button" href="form-order.html">Заказать</a>
           </li>
           <li class="more-goods__item">
-            <h3 class="more-goods__item-title">Витамины</h3>
-            <span class="more-goods_item-value">1 упаковка (30 г)</span>
-            <span class="more-goods__item-price">300 Р.</span>
+            <h3 class="more-goods__producte">Витамины</h3>
+            <span class="more-goods__value">1 упаковка (30 г)</span>
+            <span class="more-goods__price">300 Р.</span>
             <a class="more-goods__order button" href="form-order.html">Заказать</a>
           </li>
         </ul>
@@ -160,7 +160,7 @@
       </section>
       <section class="contacts">
         <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
-        <p class="contacts__address"> ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         <img class="contacts__map-nojs" src="" width="" height="" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
         <iframe class="contacts__map" src=""></iframe>
       </section>
