--- a/source/index.html
+++ b/source/index.html
@@ -29,8 +29,8 @@
     </header>
 
     <main class="page-main">
-      <h1 class="page-main__title">Функциональное питание для котов</h1>
-      <h2 class="page-main__subtitle">Занялся собой? Займись котом!</h2>
+      <h1 class="page-main__title page-main__title--white">Функциональное питание для котов</h1>
+      <p class="page-main__text">Занялся собой? Займись котом!</p>
       <section class="programs">
         <h2 class="visually-hidden">Программы питания</h2>
         <a class="programs__choice" href="programs.html">Подобрать программу</a>
@@ -90,30 +90,26 @@
         </p>
         <ul class="example__indicators index-list">
           <li class="index-list__item">
-            <fieldset class="index-list__criterion">
-              <legend class="index-list__legend">Снижение веса</legend>
-              <span class="index-list__value">5 Кг</span>
-            </fieldset>
+            <span class="index-list__value">5 Кг</span>
+            <span class="index-list__title">Снижение веса</span>
           </li>
           <li class="index-list__item">
-            <fieldset class="index-list__criterion">
-              <legend class="index-list__legend">Затрачено времени</legend>
-              <span class="index-list__value">60 дней</span>
-            </fieldset>
+            <span class="index-list__value">60 дней</span>
+            <span class="index-list__title">Затрачено времени</span>
           </li>
         </ul>
-        <span class="example__spanding">Затраты на питание: 15 000 руб.</span>
+        <p class="example__spanding">Затраты на питание: 15 000 руб.</p>
         <img class="example__photo" src="" width="" height="" alt="Пример внешнего вида кота">
         <div class="example__condition status-bar">
-          <span class="status-bar__condition">Было</span>
+          <button type="button" class="status-bar__condition">Было</button>
           <div class="status-bar__line"></div>
-          <span class="status-bar__condition">Стало</span>
+          <button type="button" class="status-bar__condition">Стало</button>
         </div>
       </section>
 
       <section class="contacts">
         <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
-        <p class="contacts__address"> ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         <img class="contacts__map-nojs" src="" width="" height="" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
         <iframe class="contacts__map" src=""></iframe>
       </section>
