Исправления опечатки и класса кнопки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -113,13 +113,13 @@
             </a>
             <p class="production__options">Объем Вкус Цена</p>
             <p class="production__value">500 г Рис 500 Р.</p>
-            <a class="production__orde buttonr" href="form-order.html">Заказать</a>
+            <a class="production__order button" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
             <h2 class="production__title">Показать еще 100500 товаров</h2>
             <p class="production__more">На самом деле вкусов гораздо больше!</p>
-            <a class="production__order production__order--grey button" href="new-prodution.html">Показать все</a>
+            <a class="production__order button button--grey" href="new-prodution.html">Показать все</a>
           </li>
         </ul>
       </section>
