--- a/source/programs.html
+++ b/source/programs.html
@@ -7,8 +7,7 @@
   <body>
     <header class="page-header">
       <a class="page-header__logo" href="index.html">
-        <img src="" class="page-header__logo-image" width="" height="" alt="Логотип CatEnergy">
-        <svg class="page-header__logo-text"></svg>
+        <svg ></svg>
       </a>
       <nav class="page-header__nav main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -94,26 +93,26 @@
           </fieldset>
           <fieldset class="form__extra">
             <h2 class="form__title title title--hr">Дополнительно</h2>
-            <ul class="form__extra-list">
-              <li class="form__extra-item">
+            <ul class="form__extra add-list">
+              <li class="add-list__item">
                 <label class="form__label">
                   <input type="checkbox" class="form__checkbox" name="sugar">
                   <span class="form__style form__style--checkbox">Сахарозаменитель</span>
                 </label>
               </li>
-              <li class="form__extra-item">
+              <li class="add-list__item">
                 <label class="form__label">
                   <input type="checkbox" class="form__checkbox" name="water">
                   <span class="form__style form__style--checkbox">Питьевая вода</span>
                 </label>
               </li>
-              <li class="form__extra-item">
+              <li class="add-list__item">
                 <label class="form__label">
                   <input type="checkbox" class="form__checkbox" name="milk">
                   <span class="form__style form__style--checkbox">Молоко</span>
                 </label>
               </li>
-              <li class="form__extra-item">
+              <li class="add-list__item">
                 <label class="form__label">
                   <input type="checkbox" class="form__checkbox" name="vitamin">
                   <span class="form__style form__style--checkbox">Витамины</span>
