--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,8 +7,7 @@
   <body>
     <header class="page-header">
       <a class="page-header__logo" href="index.html">
-        <img src="" class="page-header__logo-image" width="" height="" alt="Логотип CatEnergy">
-        <svg class="page-header__logo-text"></svg>
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191px" height="39px" alt="CatEnergy">
       </a>
       <nav class="page-header__nav main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -140,13 +139,13 @@
             <a class="more-goods__order button" href="form-order.html">Заказать</a>
           </li>
           <li class="more-goods__item">
-            <h3 class="more-goods__producte">Молоко</h3>
+            <h3 class="more-goods__product">Молоко</h3>
             <span class="more-goods__value">1 литр</span>
             <span class="more-goods__price">100 Р.</span>
             <a class="more-goods__order button" href="form-order.html">Заказать</a>
           </li>
           <li class="more-goods__item">
-            <h3 class="more-goods__producte">Витамины</h3>
+            <h3 class="more-goods__product">Витамины</h3>
             <span class="more-goods__value">1 упаковка (30 г)</span>
             <span class="more-goods__price">300 Р.</span>
             <a class="more-goods__order button" href="form-order.html">Заказать</a>
