--- a/source/programs.html
+++ b/source/programs.html
@@ -132,26 +132,34 @@
       </section>
     </main>
     <footer class="page-footer">
-      <a class="page-footer__logo" href="index.html">CAT Energy<!--чтобы было на что жмакать, потом удалю -->
-        <svg class="page-footer__logo-svg"></svg>
-      </a>
-      <div class="page-footer__wrapper">
-        <ul class="page-footer__social social-list">
-          <li class="social-list__item">
-            <a href="http://vk.com" target="_blank">vk</a>
-          </li>
-          <li class="social-list__item">
-            <a href="http://instagram.com" target="_blank">inst</a>
-          </li>
-          <li class="social-list__item">
-            <a href="http://fb.com" target="_blank">fb</a>
-          </li>
-        </ul>
+      <div class="page">
+        <a class="page-footer__logo" href="#top">
+          <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128px" height="24px" alt="CatEnergy">
+        </a>
+        <div class="page-footer__wrapper">
+          <ul class="page-footer__social social-list">
+            <li class="social-list__item">
+              <a href="http://vk.com" target="_blank">
+                <img class="social-list__item-image" src="img/icon-vk.svg" width="22px" height="12px" alt="Вконтакте">
+              </a>
+            </li>
+            <li class="social-list__item">
+              <a href="http://instagram.com" target="_blank">
+                <img class="social-list__item-image" src="img/icon-insta.svg" width="17px" height="17px" alt="Инстаграм">
+              </a>
+            </li>
+            <li class="social-list__item">
+              <a href="http://fb.com" target="_blank">
+                <img class="social-list__item-image" src="img/icon-fb.svg" width="10px" height="19px" alt="Фейсбук">
+              </a>
+            </li>
+          </ul>
+        </div>
+        <a class="page-footer__copyright" href="http://htmlacademy.ru" target="_blank">
+          <span>HTML Academy</span>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#666666" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
+        </a>
       </div>
-      <a class="page-footer__copyright" href="http://htmlacademy.ru" target="_blank">
-        <span>HTML Academy</span>
-        <svg>Лого академии</svg>
-      </a>
     </footer>
   </body>
 </html>
