--- a/source/programs.html
+++ b/source/programs.html
@@ -30,10 +30,10 @@
       </nav>
     </header>
 
-    <main class="page-main page">
+    <main class="page-main">
       <h1 class="page-main__title">Подбор программы</h1>
       <p class="page-main__text">Заполните анкету и мы подберем программу питания для вашего кота</p>
-      <section class="page-main__form">
+      <section class="page-main__form page">
         <form class="form" classmethod="post" action="https://echo.htmlacademy.ru">
           <ul class="form__about-cat about-list">
             <li class="about-list__item">
