Начал адаптивные сетки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,10 +16,10 @@
       <nav class="page-header__nav main-nav main-nav--none">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
-            <li class="main-nav__item main-nav__item--active">
+            <li class="main-nav__item">
               <a href="index.html">Главная</a>
             </li>
-            <li class="main-nav__item">
+            <li class="main-nav__item  main-nav__item--active">
               <a>Каталог продукции</a>
             </li>
             <li class="main-nav__item">
@@ -130,27 +130,35 @@
         <h2 class="more-goods__title title title--hr">Дополнительные товары</h2>
         <ul class="more-goods__list">
           <li class="more-goods__item">
-            <h3 class="more-goods__product">Сахарозаменитель</h3>
-            <span class="more-goods__value">1 упаковка (100 г)</span>
-            <span class="more-goods__price">200 Р.</span>
+            <div class="more-goods__wrapper">
+              <h3 class="more-goods__product">Сахарозаменитель</h3>
+              <span class="more-goods__value">1 упаковка (100 г)</span>
+              <span class="more-goods__price">200 Р.</span>
+            </div>
             <a class="more-goods__order button" href="form-order.html">Заказать</a>
           </li>
           <li class="more-goods__item">
-            <h3 class="more-goods__product">Питьевая вода</h3>
-            <span class="more-goods__value">5 литров</span>
-            <span class="more-goods__price">50 Р.</span>
+            <div class="more-goods__wrapper">
+              <h3 class="more-goods__product">Питьевая вода</h3>
+              <span class="more-goods__value">5 литров</span>
+              <span class="more-goods__price">50 Р.</span>
+            </div>
             <a class="more-goods__order button" href="form-order.html">Заказать</a>
           </li>
           <li class="more-goods__item">
-            <h3 class="more-goods__product">Молоко</h3>
-            <span class="more-goods__value">1 литр</span>
-            <span class="more-goods__price">100 Р.</span>
+            <div class="more-goods__wrapper">
+              <h3 class="more-goods__product">Молоко</h3>
+              <span class="more-goods__value">1 литр</span>
+              <span class="more-goods__price">100 Р.</span>
+            </div>
             <a class="more-goods__order button" href="form-order.html">Заказать</a>
           </li>
           <li class="more-goods__item">
-            <h3 class="more-goods__product">Витамины</h3>
-            <span class="more-goods__value">1 упаковка (30 г)</span>
-            <span class="more-goods__price">300 Р.</span>
+            <div class="more-goods__wrapper">
+              <h3 class="more-goods__product">Витамины</h3>
+              <span class="more-goods__value">1 упаковка (30 г)</span>
+              <span class="more-goods__price">300 Р.</span>
+            </div>
             <a class="more-goods__order button" href="form-order.html">Заказать</a>
           </li>
         </ul>
