--- a/source/index.html
+++ b/source/index.html
@@ -35,27 +35,32 @@
         <div class="page">
           <h1 class="page-main__title page-main__title--white">Функциональное питание для котов</h1>
           <p class="page-main__text page-main__text--white">Занялся собой? Займись котом!</p>
+          <a class="page-main__choice button" href="programs.html">Подобрать программу</a>
         </div>
       </div>
       <section class="programs page">
         <h2 class="visually-hidden">Программы питания</h2>
-        <a class="programs__choice button" href="programs.html">Подобрать программу</a>
+
         <article class="programs__item training">
           <div class="training__logo training__logo--slim"></div>
-          <h2 class="training__title title">Похудение</h2>
-          <p class="training__description">
-            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-          </p>
-          <a class="training__link">Каталог Slim</a>
+          <div class="training__text">
+            <h2 class="training__title">Похудение</h2>
+            <p class="training__description">
+              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+            </p>
+            <a class="training__link">Каталог Slim</a>
+          </div>
         </article>
         <article class="programs__item training">
           <div class="training__logo training__logo--pro"></div>
-          <h2 class="training__title title">Набор массы</h2>
-          <p class="training__description">
-            Заработать авторитет среди дворовых котов и даже собак?
-            Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-          </p>
-          <a class="training__link">Каталог Pro</a>
+          <div class="training__text">
+            <h2 class="training__title">Набор массы</h2>
+            <p class="training__description">
+              Заработать авторитет среди дворовых котов и даже собак?
+              Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+            </p>
+            <a class="training__link">Каталог Pro</a>
+          </div>
         </article>
       </section>
 
