--- a/source/index.html
+++ b/source/index.html
@@ -35,6 +35,7 @@
         <div class="page">
           <h1 class="page-main__title page-main__title--white">Функциональное питание для котов</h1>
           <p class="page-main__text page-main__text--white">Занялся собой? Займись котом!</p>
+          <img class="page-main__image" src="img/index-can-mobile@1x.png">
           <a class="page-main__choice button" href="programs.html">Подобрать программу</a>
         </div>
       </div>
