--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -36,7 +37,7 @@
         <ul class="page-main__list production">
           <li class="production__item">
             <a class="production__link-img" href="about-chicken500.html">
-              <img class="production__photo" src="../img/chicken-small-mobile@1x.jpg" width="" height="" alt="Cat Energy Pro 500г курица">
+              <img class="production__photo" src="img/chicken-small-mobile@1x.jpg" width="" height="" alt="Cat Energy Pro 500г курица">
             </a>
             <a class="production__link-title" href="about-chicken500.html">
               <h2 class="production__title">Cat Energy Pro 500 г</h2>
@@ -48,7 +49,7 @@
 
           <li class="production__item">
             <a class="production__link-img" href="about-chicken1000.html">
-              <img class="production__photo" src="../img/chicken-big-mobile@1x.jpg" width="" height="" alt="Cat Energy Pro 1000г курица">
+              <img class="production__photo" src="img/chicken-big-mobile@1x.jpg" width="" height="" alt="Cat Energy Pro 1000г курица">
             </a>
             <a class="production__link-title" href="about-chicken1000.html">
               <h2 class="production__title">Cat Energy Pro 1000 г</h2>
@@ -60,7 +61,7 @@
 
           <li class="production__item">
             <a class="production__link-img" href="about-fish500.html">
-              <img class="production__photo" src="../img/fish-small-mobile@1x.jpg" width="" height="" alt="Cat Energy Pro 500г рыба">
+              <img class="production__photo" src="img/fish-small-mobile@1x.jpg" width="" height="" alt="Cat Energy Pro 500г рыба">
             </a>
             <a class="production__link-title" href="about-fish500.html">
               <h2 class="production__title">Cat Energy Pro 500 г</h2>
@@ -72,7 +73,7 @@
 
           <li class="production__item">
             <a class="production__link-img" href="about-fish1000.html">
-              <img class="production__photo" src="../img/fish-big-mobile@1x.jpg" width="" height="" alt="Cat Energy Pro 1000г рыба">
+              <img class="production__photo" src="img/fish-big-mobile@1x.jpg" width="" height="" alt="Cat Energy Pro 1000г рыба">
             </a>
             <a class="production__link-title" href="about-fish1000.html">
               <h2 class="production__title">Cat Energy Pro 1000 г</h2>
@@ -84,7 +85,7 @@
 
           <li class="production__item">
             <a class="production__link-img" href="about-buckwheat500.html">
-              <img class="production__photo" src="../img/buckwheat-small-mobile@1x.jpg" width="" height="" alt="Cat Energy Slim 500г гречка">
+              <img class="production__photo" src="img/buckwheat-small-mobile@1x.jpg" width="" height="" alt="Cat Energy Slim 500г гречка">
             </a>
             <a class="production__link-title" href="about-buckwheat500.html">
               <h2 class="production__title">Cat Energy Slim 500 г</h2>
@@ -96,7 +97,7 @@
 
           <li class="production__item">
             <a class="production__link-img" href="about-buckwheat1000.html">
-              <img class="production__photo" src="../img/buckwheat-big-mobile@1x.jpg" width="" height="" alt="Cat Energy Slim 1000г гречка">
+              <img class="production__photo" src="img/buckwheat-big-mobile@1x.jpg" width="" height="" alt="Cat Energy Slim 1000г гречка">
             </a>
             <a class="production__link-title" href="about-buckwheat1000.html">
               <h2 class="production__title">Cat Energy Slim 1000 г</h2>
@@ -108,7 +109,7 @@
 
           <li class="production__item">
             <a class="production__link-img" href="about-rice500.html">
-              <img class="production__photo" src="../img/rice-small-mobile@1x.jpg" width="" height="" alt="Cat Energy Slim 500г рис">
+              <img class="production__photo" src="img/rice-small-mobile@1x.jpg" width="" height="" alt="Cat Energy Slim 500г рис">
             </a>
             <a class="production__link-title" href="about-rice500.html">
               <h2 class="production__title">Cat Energy Slim 500 г</h2>
@@ -173,7 +174,7 @@
           <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
           <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
-        <img class="contacts__map-nojs" src="../img/bg-map-mobile@1x.png" width="" height="" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+        <img class="contacts__map-nojs" src="img/bg-map-mobile@1x.png" width="" height="" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
         <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036956120251!2d30.321819042794047!3d59.93871800241896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1586373870144!5m2!1sru!2sru" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </section>
     </main>
