--- a/source/index.html
+++ b/source/index.html
@@ -2,18 +2,19 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header page">
       <div class="page-header__wrapper">
-        <a class="page-header__logo" name="top">
+        <a class="page-header__logo" id="top">
           <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191px" height="39px" alt="CatEnergy">
         </a>
-        <button class="page-header__toggle" type="button"></button>
+        <button class="page-header__toggle page-header__toggle--off" type="button"><span class="visually-hidden">Открыть меню</span></button>
       </div>
-      <nav class="page-header__nav main-nav main-nav--none">
+      <nav class="page-header__nav main-nav main-nav--closed">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
             <li class="main-nav__item main-nav__item--active">
@@ -112,7 +113,7 @@
             </li>
           </ul>
           <p class="example__spending">Затраты на питание: 15 000 руб.</p>
-          <img class="example__photo-before" src="../img/before-mobile@1x.png" width="320" height="240" alt="Пример внешнего вида кота">
+          <img class="example__photo-before" src="img/before-mobile@1x.png" width="320" height="240" alt="Пример внешнего вида кота">
           <div class="example__condition status-bar">
             <button type="button" class="status-bar__condition">Было</button>
             <div class="status-bar__line"></div>
@@ -126,7 +127,7 @@
           <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
           <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
-        <img class="contacts__map-nojs" src="../img/bg-map-mobile@1x.png" width="" height="" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+        <img class="contacts__map-nojs" src="img/bg-map-mobile@1x.png" width="" height="" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
         <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036956120251!2d30.321819042794047!3d59.93871800241896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1586373870144!5m2!1sru!2sru" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </section>
 
@@ -161,5 +162,6 @@
         </a>
       </div>
     </footer>
+    <script src="js/mobile-nav.js"></script>
   </body>
 </html>
