Адаптивные сетки без красных блоков

--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header page-header__wrap page">
+    <header class="page-header page">
       <div class="page-header__wrapper">
         <a class="page-header__logo" id="top">
           <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191px" height="39px" alt="CatEnergy">
@@ -17,13 +17,13 @@
       <nav class="page-header__nav main-nav main-nav--closed">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
-            <li class="main-nav__item main-nav__item--active">
+            <li class="main-nav__item main-nav__item--active main-nav__item--white">
               <a>Главная</a>
             </li>
-            <li class="main-nav__item">
+            <li class="main-nav__item main-nav__item--white">
               <a href="catalog.html">Каталог продукции</a>
             </li>
-            <li class="main-nav__item">
+            <li class="main-nav__item main-nav__item--white">
               <a href="programs.html">Подбор программы</a>
             </li>
           </ul>
