--- a/source/programs.html
+++ b/source/programs.html
@@ -9,12 +9,12 @@
   <body>
     <header class="page-header page">
       <div class="page-header__wrapper">
-        <a class="page-header__logo" href="index.html">
+        <a class="page-header__logo" id="top">
           <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191px" height="39px" alt="CatEnergy">
         </a>
-        <button class="page-header__toggle" type="button"></button>
+        <button class="page-header__toggle page-header__toggle--off" type="button"><span class="visually-hidden">Открыть меню</span></button>
       </div>
-      <nav class="page-header__nav main-nav main-nav--none">
+      <nav class="page-header__nav main-nav main-nav--closed">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
             <li class="main-nav__item">
@@ -23,7 +23,7 @@
             <li class="main-nav__item">
               <a href="catalog.html">Каталог продукции</a>
             </li>
-            <li class="main-nav__item  main-nav__item--active">
+            <li class="main-nav__item main-nav__item--active">
               <a>Подбор программы</a>
             </li>
           </ul>
@@ -129,12 +129,12 @@
         </form>
       </section>
       <section class="contacts">
-        <div class="page">
-          <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
+        <div class="contacts__wrap page">
+          <h2 class="contacts__title">Приглашаем к&nbsp;сотрудничеству дилеров!</h2>
           <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
-        <img class="contacts__map-nojs" src="img/bg-map-mobile@1x.png" width="" height="" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
-        <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036956120251!2d30.321819042794047!3d59.93871800241896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1586373870144!5m2!1sru!2sru" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <img class="contacts__map-nojs" src="img/bg-map-mobile@1x.png" width="320px" height="400px" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+        <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036956120251!2d30.321819042794047!3d59.93871800241896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1586373870144!5m2!1sru!2sru"  allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </section>
 
     </main>
@@ -168,5 +168,6 @@
         </a>
       </div>
     </footer>
+    <script src="js/mobile-nav.js"></script>
   </body>
 </html>
