все еще сетки без красных блоков

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -66,79 +66,187 @@
           </li>
 
           <li class="production__item">
-            <a class="production__link-img" href="about-chicken1000.html">
-              <img class="production__photo" src="img/chicken-big-mobile@1x.jpg" width="" height="" alt="Cat Energy Pro 1000г курица">
-            </a>
-            <a class="production__link-title" href="about-chicken1000.html">
-              <h2 class="production__title">Cat Energy Pro 1000 г</h2>
-            </a>
-            <p class="production__options">Объем Вкус Цена</p>
-            <p class="production__value">1000 г Курица 1000 Р.</p>
+            <div class="production__card">
+              <div class="production__logo">
+                <a class="production__link-img" href="about-chicken1000.html">
+                  <img class="production__photo" src="img/chicken-big-mobile@1x.jpg" width="140px" height="144px" alt="Cat Energy Pro 1000г курица">
+                </a>
+              </div>
+              <div class="production__text">
+                <a class="production__link-title" href="about-chicken1000.html">
+                  <h2 class="production__title">Cat Energy Pro 1000 г</h2>
+                </a>
+                <table class="production__table">
+                  <tr class="production__property">
+                    <td>Объем</td>
+                    <td>1000 г</td>
+                  </tr>
+                  <tr class="production__property">
+                    <td>Вкус</td>
+                    <td>Курица</td>
+                  </tr>
+                  <tr class="production__property">
+                    <td>Цена</td>
+                    <td>1000 Р.</td>
+                  </tr>
+                </table>
+              </div>
+            </div>
             <a class="production__order button" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
-            <a class="production__link-img" href="about-fish500.html">
-              <img class="production__photo" src="img/fish-small-mobile@1x.jpg" width="" height="" alt="Cat Energy Pro 500г рыба">
-            </a>
-            <a class="production__link-title" href="about-fish500.html">
-              <h2 class="production__title">Cat Energy Pro 500 г</h2>
-            </a>
-            <p class="production__options">Объем Вкус Цена</p>
-            <p class="production__value">500 г Рыба 700 Р.</p>
+            <div class="production__card">
+              <div class="production__logo">
+                <a class="production__link-img" href="about-fish500.html">
+                  <img class="production__photo" src="img/fish-small-mobile@1x.jpg" width="140px" height="144px" alt="Cat Energy Pro 500г рыба">
+                </a>
+              </div>
+              <div class="production__text">
+                <a class="production__link-title" href="about-fish500.html">
+                  <h2 class="production__title">Cat Energy Pro 500 г</h2>
+                </a>
+                <table class="production__table">
+                  <tr class="production__property">
+                    <td>Объем</td>
+                    <td>500 г</td>
+                  </tr>
+                  <tr class="production__property">
+                    <td>Вкус</td>
+                    <td>Рыба</td>
+                  </tr>
+                  <tr class="production__property">
+                    <td>Цена</td>
+                    <td>700 Р.</td>
+                  </tr>
+                </table>
+              </div>
+            </div>
             <a class="production__order button" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
-            <a class="production__link-img" href="about-fish1000.html">
-              <img class="production__photo" src="img/fish-big-mobile@1x.jpg" width="" height="" alt="Cat Energy Pro 1000г рыба">
-            </a>
-            <a class="production__link-title" href="about-fish1000.html">
-              <h2 class="production__title">Cat Energy Pro 1000 г</h2>
-            </a>
-            <p class="production__options">Объем Вкус Цена</p>
-            <p class="production__value">1000 г Рыба 1000 Р.</p>
+            <div class="production__card">
+              <div class="production__logo">
+                <a class="production__link-img" href="about-fish1000.html">
+                  <img class="production__photo" src="img/fish-big-mobile@1x.jpg" width="140px" height="144px" alt="Cat Energy Pro 1000г рыба">
+                </a>
+              </div>
+              <div class="production__text">
+                <a class="production__link-title" href="about-fish1000.html">
+                  <h2 class="production__title">Cat Energy Pro 1000 г</h2>
+                </a>
+                <table class="production__table">
+                  <tr class="production__property">
+                    <td>Объем</td>
+                    <td>1000 г</td>
+                  </tr>
+                  <tr class="production__property">
+                    <td>Вкус</td>
+                    <td>Рыба</td>
+                  </tr>
+                  <tr class="production__property">
+                    <td>Цена</td>
+                    <td>1000 Р.</td>
+                  </tr>
+                </table>
+              </div>
+            </div>
             <a class="production__order button" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
-            <a class="production__link-img" href="about-buckwheat500.html">
-              <img class="production__photo" src="img/buckwheat-small-mobile@1x.jpg" width="" height="" alt="Cat Energy Slim 500г гречка">
-            </a>
-            <a class="production__link-title" href="about-buckwheat500.html">
-              <h2 class="production__title">Cat Energy Slim 500 г</h2>
-            </a>
-            <p class="production__options">Объем Вкус Цена</p>
-            <p class="production__value">500 г Гречка 400 Р.</p>
+            <div class="production__card">
+              <div class="production__logo">
+                <a class="production__link-img" href="about-buckwheat500.html">
+                  <img class="production__photo" src="img/buckwheat-small-mobile@1x.jpg" width="140px" height="144px" alt="Cat Energy Slim 500г гречка">
+                </a>
+              </div>
+              <div class="production__text">
+                <a class="production__link-title" href="about-buckwheat500.html">
+                  <h2 class="production__title">Cat Energy Slim 500 г</h2>
+                </a>
+                <table class="production__table">
+                  <tr class="production__property">
+                    <td>Объем</td>
+                    <td>500 г</td>
+                  </tr>
+                  <tr class="production__property">
+                    <td>Вкус</td>
+                    <td>Гречка</td>
+                  </tr>
+                  <tr class="production__property">
+                    <td>Цена</td>
+                    <td>400 Р.</td>
+                  </tr>
+                </table>
+              </div>
+            </div>
             <a class="production__order button" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
-            <a class="production__link-img" href="about-buckwheat1000.html">
-              <img class="production__photo" src="img/buckwheat-big-mobile@1x.jpg" width="" height="" alt="Cat Energy Slim 1000г гречка">
-            </a>
-            <a class="production__link-title" href="about-buckwheat1000.html">
-              <h2 class="production__title">Cat Energy Slim 1000 г</h2>
-            </a>
-            <p class="production__options">Объем Вкус Цена</p>
-            <p class="production__value">1000 г Гречка 700 Р.</p>
+            <div class="production__card">
+              <div class="production__logo">
+                <a class="production__link-img" href="about-buckwheat1000.html">
+                  <img class="production__photo" src="img/buckwheat-big-mobile@1x.jpg" width="140px" height="144px" alt="Cat Energy Slim 1000г гречка">
+                </a>
+              </div>
+              <div class="production__text">
+                <a class="production__link-title" href="about-buckwheat1000.html">
+                  <h2 class="production__title">Cat Energy Slim 1000 г</h2>
+                </a>
+                <table class="production__table">
+                  <tr class="production__property">
+                    <td>Объем</td>
+                    <td>1000 г</td>
+                  </tr>
+                  <tr class="production__property">
+                    <td>Вкус</td>
+                    <td>Гречка</td>
+                  </tr>
+                  <tr class="production__property">
+                    <td>Цена</td>
+                    <td>700 Р.</td>
+                  </tr>
+                </table>
+              </div>
+            </div>
             <a class="production__order button" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
-            <a class="production__link-img" href="about-rice500.html">
-              <img class="production__photo" src="img/rice-small-mobile@1x.jpg" width="" height="" alt="Cat Energy Slim 500г рис">
-            </a>
-            <a class="production__link-title" href="about-rice500.html">
-              <h2 class="production__title">Cat Energy Slim 500 г</h2>
-            </a>
-            <p class="production__options">Объем Вкус Цена</p>
-            <p class="production__value">500 г Рис 500 Р.</p>
+            <div class="production__card">
+              <div class="production__logo">
+                <a class="production__link-img" href="about-rice500.html">
+                  <img class="production__photo" src="img/rice-small-mobile@1x.jpg" width="140px" height="144px" alt="Cat Energy Slim 500г рис">
+                </a>
+              </div>
+              <div class="production__text">
+                <a class="production__link-title" href="about-rice500.html">
+                  <h2 class="production__title">Cat Energy Slim 500 г</h2>
+                </a>
+                <table class="production__table">
+                  <tr class="production__property">
+                    <td>Объем</td>
+                    <td>500 г</td>
+                  </tr>
+                  <tr class="production__property">
+                    <td>Вкус</td>
+                    <td>Рис</td>
+                  </tr>
+                  <tr class="production__property">
+                    <td>Цена</td>
+                    <td>500 Р.</td>
+                  </tr>
+                </table>
+              </div>
+            </div>
             <a class="production__order button" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
-            <h2 class="production__title">Показать еще 100500 товаров</h2>
+            <h2 class="production__title production__title--nomr">Показать еще 100500 товаров</h2>
             <p class="production__more">На самом деле вкусов гораздо больше!</p>
             <a class="production__order button button--grey" href="new-prodution.html">Показать все</a>
           </li>
@@ -151,32 +259,40 @@
           <li class="more-goods__item">
             <div class="more-goods__wrapper">
               <h3 class="more-goods__product">Сахарозаменитель</h3>
-              <span class="more-goods__value">1 упаковка (100 г)</span>
-              <span class="more-goods__price">200 Р.</span>
+              <div class="more-goods__text">
+                <span class="more-goods__value">1 упаковка (100 г)</span>
+                <span class="more-goods__price">200 Р.</span>
+              </div>
             </div>
             <a class="more-goods__order button" href="form-order.html">Заказать</a>
           </li>
           <li class="more-goods__item">
             <div class="more-goods__wrapper">
               <h3 class="more-goods__product">Питьевая вода</h3>
-              <span class="more-goods__value">5 литров</span>
-              <span class="more-goods__price">50 Р.</span>
+              <div class="more-goods__text">
+                <span class="more-goods__value">5 литров</span>
+                <span class="more-goods__price">50 Р.</span>
+              </div>
             </div>
             <a class="more-goods__order button" href="form-order.html">Заказать</a>
           </li>
           <li class="more-goods__item">
             <div class="more-goods__wrapper">
               <h3 class="more-goods__product">Молоко</h3>
-              <span class="more-goods__value">1 литр</span>
-              <span class="more-goods__price">100 Р.</span>
+              <div class="more-goods__text">
+                <span class="more-goods__value">1 литр</span>
+                <span class="more-goods__price">100 Р.</span>
+              </div>
             </div>
             <a class="more-goods__order button" href="form-order.html">Заказать</a>
           </li>
           <li class="more-goods__item">
             <div class="more-goods__wrapper">
               <h3 class="more-goods__product">Витамины</h3>
-              <span class="more-goods__value">1 упаковка (30 г)</span>
-              <span class="more-goods__price">300 Р.</span>
+              <div class="more-goods__text">
+                <span class="more-goods__value">1 упаковка (30 г)</span>
+                <span class="more-goods__price">300 Р.</span>
+              </div>
             </div>
             <a class="more-goods__order button" href="form-order.html">Заказать</a>
           </li>
