--- a/source/index.html
+++ b/source/index.html
@@ -43,7 +43,7 @@
           <a class="page-main__choice button" href="programs.html">Подобрать программу</a>
         </div>
       </div>
-      <section class="programs programs__wrap page">
+      <section class="programs page">
         <h2 class="visually-hidden">Программы питания</h2>
 
         <article class="programs__item training">
@@ -69,7 +69,7 @@
         </article>
       </section>
 
-      <section class="how-work how-work__wrap page">
+      <section class="how-work page">
         <h2 class="how-work__title title">Как это работает</h2>
         <ul class="how-work__list property-list">
           <li class="property-list__item">
