--- a/source/index.html
+++ b/source/index.html
@@ -105,21 +105,28 @@
           <p class="example__description">
             Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
           </p>
-          <ul class="example__indicators index-list">
-            <li class="index-list__item">
-              <span class="index-list__value">5 Кг</span>
-              <span class="index-list__title">Снижение веса</span>
-            </li>
-            <li class="index-list__item">
-              <span class="index-list__value">60 дней</span>
-              <span class="index-list__title">Затрачено времени</span>
-            </li>
-          </ul>
-          <p class="example__spending">Затраты на питание: 15 000 руб.</p>
-          <img class="example__photo-before" src="img/before-mobile@1x.png" width="320" height="240" alt="Пример внешнего вида кота">
+          <div class="example__indicators">
+            <ul class="index-list"> <!-- нужен ли здесь класс скажем example__list ? -->
+              <li class="index-list__item">
+                <span class="index-list__value">5 Кг</span>
+                <span class="index-list__title">снижение веса</span>
+              </li>
+              <li class="index-list__item">
+                <span class="index-list__value">60 дней</span>
+                <span class="index-list__title">затрачено времени</span>
+              </li>
+            </ul>
+            <p class="example__spending">
+              <span class="example__spending-text">Затраты на питание:</span>
+              <span class="example__spending-value"> 15 000 руб.</span>
+            </p>
+          </div>
+          <img class="example__photo example__photo--before example__photo--after" src="img/before-mobile@1x.png" width="320" height="240" alt="Пример внешнего вида кота">
           <div class="example__condition status-bar">
             <button type="button" class="status-bar__condition">Было</button>
-            <div class="status-bar__line"></div>
+            <div class="status-bar__line-wrap">
+              <div class="status-bar__line-color"></div>
+            </div>
             <button type="button" class="status-bar__condition">Стало</button>
           </div>
         </div>
@@ -127,8 +134,10 @@
 
       <section class="contacts">
         <div class="contacts__wrap page">
-          <h2 class="contacts__title">Приглашаем к&nbsp;сотрудничеству дилеров!</h2>
-          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <div class="contacts__text">
+            <h2 class="contacts__title">Приглашаем к&nbsp;сотрудничеству дилеров!</h2>
+            <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          </div>
         </div>
         <img class="contacts__map-nojs" src="img/bg-map-mobile@1x.png" width="320px" height="400px" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
         <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036956120251!2d30.321819042794047!3d59.93871800241896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1586373870144!5m2!1sru!2sru"  allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
