--- a/source/catalog.html
+++ b/source/catalog.html
@@ -46,7 +46,7 @@
                 <a class="production__link-title" href="about-chicken500.html">
                   <h2 class="production__title">Cat Energy Pro 500 г</h2>
                 </a>
-                <table class="production__table" cellspacing="0">
+                <table class="production__table">
                   <tr class="production__property">
                     <td>Объем</td>
                     <td>500 г</td>
@@ -76,7 +76,7 @@
                 <a class="production__link-title" href="about-chicken1000.html">
                   <h2 class="production__title">Cat Energy Pro 1000 г</h2>
                 </a>
-                <table class="production__table" cellspacing="0">
+                <table class="production__table">
                   <tr class="production__property">
                     <td>Объем</td>
                     <td>1000 г</td>
@@ -106,7 +106,7 @@
                 <a class="production__link-title" href="about-fish500.html">
                   <h2 class="production__title">Cat Energy Pro 500 г</h2>
                 </a>
-                <table class="production__table" cellspacing="0">
+                <table class="production__table">
                   <tr class="production__property">
                     <td>Объем</td>
                     <td>500 г</td>
@@ -136,7 +136,7 @@
                 <a class="production__link-title" href="about-fish1000.html">
                   <h2 class="production__title">Cat Energy Pro 1000 г</h2>
                 </a>
-                <table class="production__table" cellspacing="0">
+                <table class="production__table">
                   <tr class="production__property">
                     <td>Объем</td>
                     <td>1000 г</td>
@@ -166,7 +166,7 @@
                 <a class="production__link-title" href="about-buckwheat500.html">
                   <h2 class="production__title">Cat Energy Slim 500 г</h2>
                 </a>
-                <table class="production__table" cellspacing="0">
+                <table class="production__table">
                   <tr class="production__property">
                     <td>Объем</td>
                     <td>500 г</td>
@@ -196,7 +196,7 @@
                 <a class="production__link-title" href="about-buckwheat1000.html">
                   <h2 class="production__title">Cat Energy Slim 1000 г</h2>
                 </a>
-                <table class="production__table" cellspacing="0">
+                <table class="production__table">
                   <tr class="production__property">
                     <td>Объем</td>
                     <td>1000 г</td>
@@ -226,7 +226,7 @@
                 <a class="production__link-title" href="about-rice500.html">
                   <h2 class="production__title">Cat Energy Slim 500 г</h2>
                 </a>
-                <table class="production__table" cellspacing="0">
+                <table class="production__table">
                   <tr class="production__property">
                     <td>Объем</td>
                     <td>500 г</td>
