--- a/source/index.html
+++ b/source/index.html
@@ -39,7 +39,7 @@
             <p class="page-main__text page-main__text--white">Занялся собой? Займись котом!</p>
           </div>
           <div class="page-main__banner-desktop"></div>
-          <img class="page-main__image" src="img/index-can-mobile@1x.png">
+          <img class="page-main__image" src="img/index-can-mobile@1x.png" width="280px" height="271px" alt="Баночка замечательного корма">
           <a class="page-main__choice button" href="programs.html">Подобрать программу</a>
         </div>
       </div>
